--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Aralel Software Studios - Designed in Switzerland, Manufactured in Germany</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">Aralel Software Studios</div>
+            <div class="logo"><img src="images/aralel-logo.png" alt="Aralel Software Studios Logo" class="logo-img"><span class="logo-text">Aralel Software Studios</span></div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#games">Games</a></li>
