introducing Availabell to the world

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <div class="logo"><img src="images/aralel-logo.png" alt="Aralel Software Studios Logo" class="logo-img"><span class="logo-text">Aralel Software Studios</span></div>
             <ul>
                 <li><a href="#home">Home</a></li>
+                <li><a href="#apps">Apps</a></li>
                 <li><a href="#games">Games</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -59,6 +60,42 @@
                 <h2>Where the harmony of precision and creativity unfolds</h2>
                 <p>In the realm of dreams, where the boundaries of reality are but a distant memory, we find ourselves lost in the vast expanse of the human imagination. It is here, in the realm of the infinite, that we find the source of our inspiration. The place where the rational and the emotional blend in perfect harmony, where the precision of the human mind meets the boundless creativity of the human spirit.</p>
                 <a href="#games" class="cta-button">Explore Our Games</a>
+            </div>
+        </section>
+
+        <section id="apps" class="apps-section hidden">
+            <div class="section-title-container">
+                <h2 class="section-title">Our Apps</h2>
+                <div class="title-decoration"></div>
+                <p class="section-subtitle">Innovative solutions for modern challenges</p>
+            </div>
+            <div class="apps-grid">
+                <div class="app-card">
+                    <div class="app-icon">
+                        <svg class="bell-animation" viewBox="0 0 100 100">
+                            <path class="bell-body" d="M50 20 C65 20 75 35 75 60 L75 70 L25 70 L25 60 C25 35 35 20 50 20" fill="none" stroke="currentColor" stroke-width="4"/>
+                            <circle class="bell-clapper" cx="50" cy="65" r="4" fill="currentColor">
+                                <animate attributeName="cy" values="65;67;65" dur="1s" repeatCount="indefinite" />
+                            </circle>
+                            <path class="bell-sound-wave" d="M85 60 Q90 60 95 60" stroke="currentColor" stroke-width="2" opacity="0">
+                                <animate attributeName="opacity" values="0;1;0" dur="2s" repeatCount="indefinite" />
+                            </path>
+                            <path class="bell-sound-wave" d="M15 60 Q10 60 5 60" stroke="currentColor" stroke-width="2" opacity="0">
+                                <animate attributeName="opacity" values="0;1;0" dur="2s" repeatCount="indefinite" begin="0.5s" />
+                            </path>
+                        </svg>
+                    </div>
+                    <h3>Availabell</h3>
+                    <div class="app-info">
+                        <p class="app-description">Intelligent Availability Management Solution - Streamline your availability status with automated updates and smart management.</p>
+                        <div class="app-features">
+                            <span class="feature">Android</span>
+                            <span class="feature">Real-time</span>
+                            <span class="feature">Automated</span>
+                        </div>
+                        <a href="apps/availabell.html" class="learn-more">Learn More</a>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -149,8 +186,8 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h3>Our Locations</h3>
-                            <p>Development Studios: Aachen, Germany</p>
-                            <p>Design Studios: Basel, Switzerland</p>
+                            <p>Development Studio: Aachen, Germany</p>
+                            <p>Design Studio: Basel, Switzerland</p>
                         </div>
                     </div>
                     <div class="contact-item">
