update name and style

--- a/apps/availabell-privacy.html
+++ b/apps/availabell-privacy.html
@@ -65,8 +65,8 @@
         <nav>
             <div class="logo">
                 <a href="../index.html" style="text-decoration: none; color: inherit;">
-                    <img src="../images/aralel-logo.png" alt="Aralel Software Studios Logo" class="logo-img">
-                    <span class="logo-text">Aralel Software Studios</span>
+                    <img src="../images/aralel-logo.png" alt="Aralel GMBH Logo" class="logo-img">
+                    <span class="logo-text">Aralel GMBH</span>
                 </a>
             </div>
         </nav>
@@ -81,7 +81,7 @@
             <p>At Availabell, we take your privacy seriously. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our Availabell mobile application. Please read this privacy policy carefully. If you do not agree with the terms of this privacy policy, please do not access the application.</p>
 
             <h2>2. Data Controller</h2>
-            <p>Aralel Software Studios GmbH<br>
+            <p>Aralel GMBH<br>
             143 Oppenhoffallee<br>
             52066 Aachen, Germany<br>
             Email: privacy@aralel.com</p>
@@ -168,7 +168,7 @@
             <div class="contact-info">
                 <p>If you have any questions about this Privacy Policy, please contact us:</p>
                 <p>Data Protection Officer<br>
-                Aralel Software Studios GmbH<br>
+                Aralel GMBH<br>
                 Oppenhoffallee 143<br>
                 52066 Aachen, Germany<br>
                 Email: dpo@aralel.com<br>
@@ -180,7 +180,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Aralel Software Studios. All rights reserved.</p>
+        <p>&copy; 2025 Aralel GMBH. All rights reserved.</p>
     </footer>
 
     <script src="../script.js"></script>
