--- a/apps/availabell.html
+++ b/apps/availabell.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Availabell - Aralel Software Studios</title>
+    <title>Availabell - Aralel GMBH</title>
     
     <!-- Primary Meta Tags -->
     <meta name="description" content="Availabell - Intelligent Availability Management Solution for modern teams and professionals.">
@@ -105,8 +105,8 @@
         <nav>
             <div class="logo">
                 <a href="../index.html" style="text-decoration: none; color: inherit;">
-                    <img src="../images/aralel-logo.png" alt="Aralel Software Studios Logo" class="logo-img">
-                    <span class="logo-text">Aralel Software Studios</span>
+                    <img src="../images/aralel-logo.png" alt="Aralel GMBH Logo" class="logo-img">
+                    <span class="logo-text">Aralel GMBH</span>
                 </a>
             </div>
         </nav>
@@ -197,7 +197,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Aralel Software Studios. All rights reserved. | <a href="availabell-privacy.html" style="color: inherit;">Privacy Policy</a></p>
+        <p>&copy; 2025 Aralel GMBH. All rights reserved. | <a href="availabell-privacy.html" style="color: inherit;">Privacy Policy</a></p>
     </footer>
 
     <script src="../script.js"></script>
