Limit max-width for table header and cell elements

--- a/market.html
+++ b/market.html
@@ -84,7 +84,7 @@
     }
     thead th.sortable { cursor: pointer; user-select: none; }
     thead th .sort-indicator { float: right; color: var(--muted); font-size: 12px; margin-left: 6px; }
-    th, td { padding: 10px 12px; font-size: 14px; text-align: left; white-space: nowrap; }
+    th, td { padding: 10px 12px; font-size: 14px; text-align: left; max-width: 100px; }
     td:first-child { white-space: normal; word-wrap: break-word; max-width: 200px; }
     tbody tr:nth-child(even) td { background: #fcfcfd; }
     tbody tr:hover td { background: #f7f8fb; }
