--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="google-adsense-account" content="ca-pub-2499635055097290">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2499635055097290"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
