GmbH is correct

--- a/apps/availabell_en.html
+++ b/apps/availabell_en.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Availabell - Aralel Gmbh</title>
+    <title>Availabell - Aralel GmbH</title>
     
     <!-- Primary Meta Tags -->
     <meta name="description" content="Availabell - Intelligent Availability Management Solution for modern teams and professionals.">
@@ -105,11 +105,17 @@
         <nav>
             <div class="logo">
                 <a href="../en.html" style="text-decoration: none; color: inherit;">
-                    <img src="../images/aralel-logo.png" alt="Aralel Gmbh Logo" class="logo-img">
-                    <span class="logo-text">Aralel Gmbh</span>
+                    <img src="../images/aralel-logo.png" alt="Aralel GmbH Logo" class="logo-img">
+                    <span class="logo-text">Aralel GmbH</span>
                 </a>
             </div>
+            <button class="mobile-menu-toggle" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <ul>
+                <li><a href="../en.html">Home</a></li>
                 <li class="lang-switch"><a href="availabell.html" title="Deutsch">🇩🇪</a></li>
             </ul>
         </nav>
@@ -216,7 +222,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Aralel Gmbh. All rights reserved. | <a href="availabell-privacy.html" style="color: inherit;">Privacy Policy</a></p>
+        <p>&copy; 2025 Aralel GmbH. All rights reserved. | <a href="availabell-privacy.html" style="color: inherit;">Privacy Policy</a></p>
     </footer>
 
     <script src="../script.js"></script>
