--- a/apps/availabell-privacy.html
+++ b/apps/availabell-privacy.html
@@ -65,8 +65,8 @@
         <nav>
             <div class="logo">
                 <a href="../index.html" style="text-decoration: none; color: inherit;">
-                    <img src="../images/aralel-logo.png" alt="Aralel Gmbh Logo" class="logo-img">
-                    <span class="logo-text">Aralel Gmbh</span>
+                    <img src="../images/aralel-logo.png" alt="Aralel GmbH Logo" class="logo-img">
+                    <span class="logo-text">Aralel GmbH</span>
                 </a>
             </div>
         </nav>
@@ -81,7 +81,7 @@
             <p>At Availabell, we take your privacy seriously. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our Availabell mobile application. Please read this privacy policy carefully. If you do not agree with the terms of this privacy policy, please do not access the application.</p>
 
             <h2>2. Data Controller</h2>
-            <p>Aralel Gmbh<br>
+            <p>Aralel GmbH<br>
             143 Oppenhoffallee<br>
             52066 Aachen, Germany<br>
             Email: privacy@aralel.com</p>
@@ -168,7 +168,7 @@
             <div class="contact-info">
                 <p>If you have any questions about this Privacy Policy, please contact us:</p>
                 <p>Data Protection Officer<br>
-                Aralel Gmbh<br>
+                Aralel GmbH<br>
                 Oppenhoffallee 143<br>
                 52066 Aachen, Germany<br>
                 Email: dpo@aralel.com<br>
@@ -180,7 +180,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Aralel GMBH. All rights reserved. | <a href="../privacy-policy.html" style="color: inherit;">Privacy Policy</a> | <a href="#" class="cookie-settings-link" style="color: inherit;">Cookie Settings</a></p>
+        <p>&copy; 2025 Aralel GmbH. All rights reserved. | <a href="../privacy-policy.html" style="color: inherit;">Privacy Policy</a> | <a href="#" class="cookie-settings-link" style="color: inherit;">Cookie Settings</a></p>
     </footer>
 
     <script src="../cookie-consent.js"></script>
