--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aralel GMBH - Designed in Switzerland, Manufactured in Germany</title>
+    <title>Aralel GmbH</title>
 
     <!-- Primary Meta Tags -->
-    <meta name="description" content="Aralel GMBH combines Swiss precision with German engineering to build exceptional digital products: apps, websites, ecommerce, and games.">
+    <meta name="description" content="Aralel GmbH combines Swiss precision with German engineering to build exceptional digital products: apps, websites, ecommerce, and games.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://aralel.com/">
-    <meta property="og:title" content="Aralel Gmbh - In der Schweiz entworfen, in Deutschland gefertigt">
+    <meta property="og:title" content="Aralel GmbH - In der Schweiz entworfen, in Deutschland gefertigt">
     <meta property="og:description" content="Wir entwickeln Apps, Websites, E-Commerce und Spiele mit Schweizer Präzision und deutscher Ingenieurskunst.">
     <meta property="og:image" content="https://aralel.com/images/aralel-preview.jpg">
-    <meta property="og:site_name" content="Aralel GMBH">
+    <meta property="og:site_name" content="Aralel GmbH">
     <meta property="og:locale" content="en_US">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://aralel.com/">
-    <meta property="twitter:title" content="Aralel Gmbh - In der Schweiz entworfen, in Deutschland gefertigt">
+    <meta property="twitter:title" content="Aralel GmbH - In der Schweiz entworfen, in Deutschland gefertigt">
     <meta property="twitter:description" content="Wir entwickeln Apps, Websites, E-Commerce und Spiele mit Schweizer Präzision und deutscher Ingenieurskunst.">
     <meta property="twitter:image" content="https://aralel.com/images/aralel-preview.jpg">
 
@@ -34,7 +34,7 @@
 
     <!-- PWA Support -->
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#1d4ed8">
+    <meta name="theme-color" content="#DD0000">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -45,7 +45,12 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="images/aralel-logo.png" alt="Aralel Gmbh Logo" class="logo-img"><span class="logo-text">Aralel Gmbh</span></div>
+            <div class="logo"><img src="images/aralel-logo.png" alt="Aralel GmbH Logo" class="logo-img"><span class="logo-text">Aralel GmbH</span></div>
+            <button class="mobile-menu-toggle" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#apps">Apps</a></li>
@@ -147,21 +152,21 @@
                 <div class="section-title-container">
                     <h2 class="section-title">Unsere Geschichte</h2>
                     <div class="title-decoration"></div>
-                    <p class="section-subtitle">Die Reise hinter Aralel Gmbh</p>
+                    <p class="section-subtitle">Die Reise hinter Aralel GmbH</p>
                 </div>
                 <div class="about-grid">
                     <div class="about-image">
                         <div class="about-image-overlay"></div>
                     </div>
                     <div class="about-text">
-                        <h3>Where Creativity Meets Technical Excellence</h3>
-                        <p>Founded in 2023, Aralel GMBH emerged from a shared vision between builders from Switzerland and Germany. We combine <span class="flag" title="Swiss">🇨🇭</span> precision and attention to detail with <span class="flag" title="German">🇩🇪</span> engineering excellence to deliver exceptional digital products across apps, websites, ecommerce, and games.</p>
+                        <h3>Wo Kreativität auf technische Exzellenz trifft</h3>
+                        <p>Gegründet im Jahr 2023, entstand Aralel GmbH aus einer gemeinsamen Vision zwischen Entwicklern aus der Schweiz und Deutschland. Wir verbinden <span class="flag" title="Swiss">🇨🇭</span> Präzision und Liebe zum Detail mit <span class="flag" title="German">🇩🇪</span> Ingenieurskunst, um außergewöhnliche digitale Produkte in den Bereichen Apps, Websites, E-Commerce und Spiele zu liefern.</p>
 
-                        <h3>Our Philosophy</h3>
-                        <p>We believe great software should be transformative—whether apps, websites, ecommerce, or games. Every project we undertake adheres to our core values of innovation, quality, and user-centered design.</p>
+                        <h3>Unsere Philosophie</h3>
+                        <p>Wir glauben, dass großartige Software transformativ sein sollte – ob Apps, Websites, E-Commerce oder Spiele. Jedes Projekt, das wir durchführen, entspricht unseren Grundwerten Innovation, Qualität und benutzerzentriertes Design.</p>
 
-                        <h3>The Team</h3>
-                        <p>Our diverse team of developers, designers, and product builders brings experience across apps, web, ecommerce, and games. United by our passion for quality, we're committed to pushing boundaries and exceeding expectations with every release.</p>
+                        <h3>Das Team</h3>
+                        <p>Unser vielfältiges Team aus Entwicklern, Designern und Produktentwicklern bringt Erfahrung in den Bereichen Apps, Web, E-Commerce und Spiele mit. Vereint durch unsere Leidenschaft für Qualität sind wir bestrebt, mit jeder Veröffentlichung Grenzen zu überschreiten und Erwartungen zu übertreffen.</p>
                     </div>
                 </div>
             </div>
@@ -180,14 +185,6 @@
                         <div>
                             <h3>Schreiben Sie uns</h3>
                             <p><a href="mailto:contact@aralel.com">contact@aralel.com</a></p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <div>
-                            <h3>Unsere Standorte</h3>
-                            <p>Entwicklungsstudio: Aachen, Deutschland</p>
-                            <p>Designstudio: Basel, Schweiz</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -226,10 +223,40 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Aralel GMBH. All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="#" class="cookie-settings-link">Cookie Settings</a> | <a href="#" id="invalidate-cache">Invalidate cache</a></p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Aralel GmbH</h3>
+                <p style="color: #cccccc;">Schweizer Präzision trifft deutsche Ingenieurskunst. Wir entwickeln außergewöhnliche digitale Produkte.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Produkte</h3>
+                <ul>
+                    <li><a href="#apps">Apps</a></li>
+                    <li><a href="#games">Spiele</a></li>
+                    <li><a href="apps/availabell.html">Availabell</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Unternehmen</h3>
+                <ul>
+                    <li><a href="#about">Über uns</a></li>
+                    <li><a href="#contact">Kontakt</a></li>
+                    <li><a href="privacy-policy.html">Datenschutz</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Sprache</h3>
+                <ul>
+                    <li><a href="index.html">🇩🇪 Deutsch</a></li>
+                    <li><a href="en.html">🇬🇧 English</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Aralel GmbH. Alle Rechte vorbehalten. | <a href="#" id="invalidate-cache">Cache ungültig machen</a></p>
+        </div>
     </footer>
 
-    <script src="cookie-consent.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
