--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Aralel GMBH</title>
+    <title>Privacy Policy - Aralel GmbH</title>
 
-    <meta name="description" content="Privacy Policy for Aralel GMBH. Learn how we collect, use, and protect your personal data.">
+    <meta name="description" content="Privacy Policy for Aralel GmbH. Learn how we collect, use, and protect your personal data.">
 
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -109,8 +109,8 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/aralel-logo.png" alt="Aralel GMBH Logo" class="logo-img">
-                <span class="logo-text">Aralel GMBH</span>
+                <img src="images/aralel-logo.png" alt="Aralel GmbH Logo" class="logo-img">
+                <span class="logo-text">Aralel GmbH</span>
             </div>
             <ul>
                 <li><a href="index.html#home">Home</a></li>
@@ -133,13 +133,11 @@
         </div>
 
         <h2>1. Who We Are</h2>
-        <p>Aralel GMBH ("we", "us", "our") is the data controller responsible for your personal data. We are a digital products company with operations in Germany and Switzerland.</p>
+        <p>Aralel GmbH ("we", "us", "our") is the data controller responsible for your personal data. We are a digital products company with operations in Germany and Switzerland.</p>
         <p><strong>Contact Details:</strong></p>
         <ul>
-            <li><strong>Company:</strong> Aralel GMBH</li>
+            <li><strong>Company:</strong> Aralel GmbH</li>
             <li><strong>Email:</strong> <a href="mailto:privacy@aralel.com">privacy@aralel.com</a></li>
-            <li><strong>Development Studio:</strong> Aachen, Germany</li>
-            <li><strong>Design Studio:</strong> Basel, Switzerland</li>
         </ul>
 
         <h2>2. What Data We Collect</h2>
@@ -276,7 +274,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Aralel GMBH. All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="#" class="cookie-settings-link">Cookie Settings</a></p>
+        <p>&copy; 2025 Aralel GmbH. All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="#" class="cookie-settings-link">Cookie Settings</a></p>
     </footer>
 
     <script src="cookie-consent.js"></script>
