more mobile friendly

--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
             <div class="contact-container">
                 <div class="contact-info">
                     <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
+                        <i class="fas fa-envelope mobile_hidden"></i>
                         <div>
                             <h3>Schreiben Sie uns</h3>
                             <p><a href="mailto:contact@aralel.com">contact@aralel.com</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-comment"></i>
+                        <i class="fas fa-comment mobile_hidden"></i>
                         <div>
                             <h3>Soziale Medien</h3>
                             <div class="social-links">
