--- a/en.html
+++ b/en.html
@@ -178,14 +178,14 @@
             <div class="contact-container">
                 <div class="contact-info">
                     <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
+                        <i class="fas fa-envelope mobile_hidden"></i>
                         <div>
                             <h3>Email Us</h3>
                             <p><a href="mailto:contact@aralel.com">contact@aralel.com</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-comment"></i>
+                        <i class="fas fa-comment mobile_hidden"></i>
                         <div>
                             <h3>Social Media</h3>
                             <div class="social-links">
